--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "assessmed": "file:",
     "autoprefixer": "10.4.15",
