--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -54,7 +54,7 @@
     "framer-motion": "^11.0.8",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
-    "next": "15.1.8",
+    "next": "15.3.2",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "postcss": "8.4.38",
